--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -14,14 +14,14 @@
     <header class="w-100 bg-light">
         <div class="container">
             <nav class="navbar">
-                <a class="navbar-brand fs-3" href="{% url 'home' %}">SUPER To Do</a>
+                <a class="navbar-brand fs-3" href="{% url 'task_list' %}">SUPER To Do</a>
                 <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                       <li class="nav-item">
-                        <a class="nav-link" href="{% url 'home' %}">Tarefas</a>
+                        <a class="nav-link" href="{% url 'task_list' %}">Tarefas</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="#">Usuários</a>
@@ -33,7 +33,7 @@
                 </div>
 
                 <div class="navbar-nav d-none d-lg-flex flex-row gap-5">
-                    <a class="nav-link" href="{% url 'home' %}">Tarefas</a>
+                    <a class="nav-link" href="{% url 'task_list' %}">Tarefas</a>
                     <a class="nav-link" href="#">Usuários</a>
                     <a class="nav-link" href="#">Perfil</a>
                 </div>
