--- a/tasks/templates/tasks/list-tasks.html
+++ b/tasks/templates/tasks/list-tasks.html
@@ -5,7 +5,7 @@
     <div class="">
         <h1>Lista de Tarefas</h1>
         <div class="py-4 d-flex gap-5 justify-content-between">
-            <button class="btn btn-secondary">+ Adicionar Tarefa</button>
+            <a href="{% url 'create_task' %}" class="btn btn-secondary">+ Adicionar Tarefa</a>
             <div class="input-group w-75">
                 <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
                 <span class="input-group-text" id="inputGroup-sizing-default"><i class="fa-solid fa-magnifying-glass"></i></span>
