--- a/tasks/templates/tasks/list-tasks.html
+++ b/tasks/templates/tasks/list-tasks.html
@@ -16,8 +16,8 @@
             <li class="list-group-item d-flex justify-content-between fs-4">
                 <a href="{% url 'task_view' task.id %}" class="link-dark link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover">{{task.title}}</a> 
                 <div class="d-flex gap-2 justify-content-center align-items-center">
-                    <i class="fa-solid fa-pen-to-square" style="color: #7a7429;"></i>
-                    <i class="fa-solid fa-trash" style="color: #fc0303;"></i>
+                    <a href="{% url 'update_task' task.id%}"><i class="fa-solid fa-pen-to-square" style="color: #7a7429;"></i></a> 
+                    <a href=""><i class="fa-solid fa-trash" style="color: #fc0303;"></i></a> 
                 </div>
             </li>
             {% endfor %}
