--- a/tasks/templates/tasks/list-tasks.html
+++ b/tasks/templates/tasks/list-tasks.html
@@ -11,13 +11,22 @@
                 <span class="input-group-text" id="inputGroup-sizing-default"><i class="fa-solid fa-magnifying-glass"></i></span>
             </div>
         </div>
+        
+        {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+            <li{% if message.tags %} class="alert alert-{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+
         <ul class="list-group list-group-flush">
             {% for task in tasks %} 
             <li class="list-group-item d-flex justify-content-between fs-4">
                 <a href="{% url 'task_view' task.id %}" class="link-dark link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover">{{task.title}}</a> 
                 <div class="d-flex gap-2 justify-content-center align-items-center">
-                    <a href="{% url 'update_task' task.id%}"><i class="fa-solid fa-pen-to-square" style="color: #7a7429;"></i></a> 
-                    <a href=""><i class="fa-solid fa-trash" style="color: #fc0303;"></i></a> 
+                    <a href="{% url 'update_task' task.id %}"><i class="fa-solid fa-pen-to-square" style="color: #7a7429;"></i></a> 
+                    <a href="{% url 'delete_task' task.id %}"><i class="fa-solid fa-trash" style="color: #fc0303;"></i></a> 
                 </div>
             </li>
             {% endfor %}
