--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -51,6 +51,8 @@
         <p>&copy; 2024 SUPER To Do. Desenvolvido por <a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="https://github.com/RenanppCosta/">Renan Costa</a>.</p>
     </footer>
 
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="{% static 'js/scripts.js' %}"></script>
 </body>
 </html>
