--- a/tasks/templates/tasks/create-task.html
+++ b/tasks/templates/tasks/create-task.html
@@ -1,13 +1,14 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load crispy_forms_tags %}
 {% block content %}
 
-<div class="d-flex justify-content-center align-items-center flex-column">
+<div class="d-flex flex-column">
     <h1>Adicione sua nova tarefa:</h1>
-    <form method="post">
+    <form method="post" class="d-flex flex-column gap-3">
         {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" class="btn btn-success" value="Criar Tarefa">
+        {{ form|crispy }}
+        <input type="submit" class="btn btn-success" style="width: 140px;" value="Criar Tarefa">
     </form>
 </div>
 
