--- a/tasks/templates/tasks/list-tasks.html
+++ b/tasks/templates/tasks/list-tasks.html
@@ -6,10 +6,10 @@
         <h1>Lista de Tarefas</h1>
         <div class="py-4 d-flex gap-5 justify-content-between">
             <a href="{% url 'create_task' %}" class="btn btn-secondary">+ Adicionar Tarefa</a>
-            <div class="input-group w-75">
-                <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-                <span class="input-group-text" id="inputGroup-sizing-default"><i class="fa-solid fa-magnifying-glass"></i></span>
-            </div>
+            <form class="input-group w-75" method="get" id="search-form">
+                <input type="text" class="form-control" name="search" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Digite a tarefa que deseja buscar." value="{{ request.GET.search }}">
+                <span class="input-group-text" id="inputGroup-sizing-default" style="cursor: pointer;"><i class="fa-solid fa-magnifying-glass"></i></span>
+            </form>
         </div>
         
         {% if messages %}
