--- a/tasks/templates/tasks/update-task.html
+++ b/tasks/templates/tasks/update-task.html
@@ -1,13 +1,14 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load crispy_forms_tags %}
 {% block content %}
 
-<div class="d-flex justify-content-center align-items-center flex-column">
-    <h1>Editando sua tarefa {{task.title}}</h1>
-    <form method="post">
+<div class="d-flex flex-column">
+    <h1>Edite sua tarefa {{task.title}}:</h1>
+    <form method="post" class="d-flex flex-column gap-3">
         {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" class="btn btn-success" value="Editar Tarefa">
+        {{ form|crispy }}
+        <input type="submit" class="btn btn-success" style="width: 140px;" value="Editar Tarefa">
     </form>
 </div>
 
