--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -20,6 +20,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
+                    {% if user.is_authenticated %}
                       <li class="nav-item">
                         <a class="nav-link" href="{% url 'task_list' %}">Tarefas</a>
                       </li>
@@ -29,13 +30,32 @@
                       <li class="nav-item">
                         <a class="nav-link" href="#">Perfil</a>
                       </li>
+                      <li class="nav-item">
+                        <form action="{% url 'logout' %}" method="post">
+                            {% csrf_token %}
+                            <button type="submit" id="sair" class="nav-link">Sair</button>
+                        </form>
+                      </li>
+                      {% else %}
+                      <li class="nav-item">
+                        <a class="nav-link" href="/login">Login</a>
+                      </li>
+                    {% endif %}
                     </ul>
                 </div>
 
                 <div class="navbar-nav d-none d-lg-flex flex-row gap-5">
+                    {% if user.is_authenticated %}
                     <a class="nav-link" href="{% url 'task_list' %}">Tarefas</a>
                     <a class="nav-link" href="#">Usuários</a>
                     <a class="nav-link" href="#">Perfil</a>
+                    <form action="{% url 'logout' %}" method="post">
+                        {% csrf_token %}
+                        <button type="submit" id="sair" class="nav-link">Sair</button>
+                    </form>
+                    {% else %}
+                    <a class="nav-link" href="/login">Login</a>
+                    {% endif %}
                 </div>
             </nav>
         </div>  
