--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,14 +1,13 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 
-{% block title %}Entrar{% endblock %}
 
 {% block content %}
     <div class="row justify-content-center align-items-center">
         <div class="col-md-6 col-lg-5">
             <div class="card shadow-lg border-0 rounded-lg mt-5">
                 <div class="card-header bg-secondary text-white text-center py-4">
-                    <h3 class="mb-0">Entrar no To Do List</h3>
+                    <h3 class="mb-0">Criar Conta</h3>
                 </div>
                 <div class="card-body p-4">
                     <form method="post">
@@ -18,12 +17,12 @@
                         {{ form|crispy }}
 
                         <div class="form-group d-flex align-items-center justify-content-center mt-4 mb-0">
-                            <button type="submit" class="btn btn-secondary">Entrar</button>
+                            <button type="submit" class="btn btn-secondary">Registrar</button>
                         </div>
                     </form>
                 </div>
                 <div class="card-footer text-center py-3">
-                    <div class="small"><a href="{% url 'signup'%}" class="link-dark link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover">Precisa de uma conta? Cadastre-se!</a></div>
+                    <div class="small"><a href="/login" class="link-dark link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover">Já possui uma conta? Faça o login!</a></div>
                 </div>
             </div>
         </div>
